Rewrite tick scheduler